--- a/static/style.css
+++ b/static/style.css
@@ -567,7 +567,7 @@ textarea.ng-valid {
   text-transform: uppercase;
   cursor: pointer;
   background-color: #e71328;
-  color: #000;
+  color: white;
   border: 2px solid #e71328;
   font-weight: 600;
   z-index: 100;
